tests/correct/comment_multiline.ast.proc
(module 0
    (assign 4
        (id 4 hello)
