tests/error/keyword.ast.proc
(module 0
    (assign 1
        (id 1 del)
